--- a/Uzpildymas.html
+++ b/Uzpildymas.html
@@ -20,7 +20,8 @@
 				<input type="email" placeholder="" required>
 			</fieldset>
 			<fieldset>
-				<label>Sutinku su taisyklemis</label>
+				<input type="checkbox">
+				<label> Sutinku su taisyklemis</label>
 			</fieldset>
 		<h2>Pasitikrinkite saskaitos adresa</h2>
 		<label>Lytis:*</label>
