--- a/Css/CSSSSSLENTELES.html
+++ b/Css/CSSSSSLENTELES.html
@@ -15,27 +15,31 @@
 		<article>
 <h2>Pavadinimas</h2>
 <p>is priminė, kad kai kurie <span>nurodymai</span> Radviliškio rajono savivaldybei buvo duoti jau šį savaitgalį – dėl testavimo, renginių, steigiamas mobilus punktas, apsispręsta dėl nuotolinio mokymosi 5–12 klasėms, iki kol bus išsiaiškintas tikrasis infekcijos lygis. „Čia gali būti panašus atvejis kaip Nemenčinėje – bendruomenė kompaktiška, yra tokio nuogąstavimo, kad virusas išplitęs. (…) Kol kas stengiamasi lokaliai valdyti židinius, dar nepriimti sprendimų nacionalinių, bet rekomendacijų tam tikrų tikrai gali atsirasti.
+	<a href="#">Placiau</a>
 </p>
 </article>
 		<article>
 <h2>Pavadinimas</h2>
 <p>is priminė, kad kai kurie nurodymai Radviliškio rajono savivaldybei buvo duoti jau šį savaitgalį – dėl testavimo, renginių, steigiamas mobilus punktas, apsispręsta dėl nuotolinio mokymosi 5–12 klasėms, iki kol bus išsiaiškintas tikrasis infekcijos lygis. „Čia gali būti panašus atvejis kaip Nemenčinėje – bendruomenė kompaktiška, yra tokio nuogąstavimo, kad virusas išplitęs. (…) Kol kas stengiamasi lokaliai valdyti židinius, dar nepriimti sprendimų nacionalinių, bet rekomendacijų tam tikrų tikrai gali atsirasti.
-
+<a href="#">Placiau</a>
 </p>
 </article>
 		<article>
 <h2>Pavadinimas</h2>
 <p>is priminė, kad kai kurie nurodymai Radviliškio rajono savivaldybei buvo duoti jau šį savaitgalį – dėl testavimo, renginių, steigiamas mobilus punktas, apsispręsta dėl nuotolinio mokymosi 5–12 klasėms, iki kol bus išsiaiškintas tikrasis infekcijos lygis. „Čia gali būti panašus atvejis kaip Nemenčinėje – bendruomenė kompaktiška, yra tokio nuogąstavimo, kad virusas išplitęs. (…) Kol kas stengiamasi lokaliai valdyti židinius, dar nepriimti sprendimų nacionalinių, bet rekomendacijų tam tikrų tikrai gali atsirasti.
+		<a href="#">Placiau</a>
 </p>
 </article>
 		<article>
 <h2>Pavadinimas</h2>
 <p>is priminė, kad kai kurie nurodymai Radviliškio rajono savivaldybei buvo duoti jau šį savaitgalį – dėl testavimo, renginių, steigiamas mobilus punktas, apsispręsta dėl nuotolinio mokymosi 5–12 klasėms, iki kol bus išsiaiškintas tikrasis infekcijos lygis. „Čia gali būti panašus atvejis kaip Nemenčinėje – bendruomenė kompaktiška, yra tokio nuogąstavimo, kad virusas išplitęs. (…) Kol kas stengiamasi lokaliai valdyti židinius, dar nepriimti sprendimų nacionalinių, bet rekomendacijų tam tikrų tikrai gali atsirasti.
+		<a href="#">Placiau</a>
 </p>
 </article>
 		<article>
 <h2>Pavadinimas</h2>
 <p>is priminė, kad kai kurie nurodymai Radviliškio rajono savivaldybei buvo duoti jau šį savaitgalį – dėl testavimo, renginių, steigiamas mobilus punktas, apsispręsta dėl nuotolinio mokymosi 5–12 klasėms, iki kol bus išsiaiškintas tikrasis infekcijos lygis. „Čia gali būti panašus atvejis kaip Nemenčinėje – bendruomenė kompaktiška, yra tokio nuogąstavimo, kad virusas išplitęs. (…) Kol kas stengiamasi lokaliai valdyti židinius, dar nepriimti sprendimų nacionalinių, bet rekomendacijų tam tikrų tikrai gali atsirasti.
+		<a href="#">Placiau</a>
 
 </p>
 </article>
